test/asm/union-in-rom.err
error: union-in-rom.asm(2):
    Cannot use UNION inside of ROM0 or ROMX sections
error: union-in-rom.asm(3):
    Found ENDU outside of a UNION construct
Assembly aborted with 2 errors!
